--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -523,19 +523,12 @@ patches = [
     # Remove cef_sandbox dependency on boringssl functions.
     # https://github.com/chromiumembedded/cef/issues/2743
     #
-    # Enable the VS 2015 Update 2 fix when building with the MSVC standard
-    # library.
-    #
     # Avoid usage of std::atomic_flag::test() added in C++20.
     # https://github.com/llvm/llvm-project/issues/57364
     #
     # Avoid usage of PartitionAlloc assertions (PA_BASE_CHECK) in raw_ptr.h.
     #
-    # win: Add SHA256 implementation for Sid::FromNamedCapability using the
-    # Crypto API.
-    # https://github.com/chromiumembedded/cef/issues/3791
-    #
-    # win: Disable use of Rust for JSON parsing with cef_sandbox.
+    # Disable use of Rust for JSON parsing with cef_sandbox.
     # Enables the fallback to C++ that was removed in
     # https://crrev.com/9ddc1624637c8cfa8ef50a95abd779e0ba4d67f6
     #
@@ -551,12 +544,6 @@ patches = [
     # Fix crash in RenderWidgetHostImpl::WasHidden when closing OSR browser.
     # https://github.com/chromiumembedded/cef/issues/3834
     'name': 'osr_fling_2745',
-  },
-  {
-    # Windows: Build targets as C++17 to avoid export of std::is_integral
-    # templates in cef_sandbox that should be inlined.
-    # https://github.com/chromiumembedded/cef/issues/2819
-    'name': 'win_cpp17_msvc_sandbox_2819',
   },
   {
     # libxml access is now limited to targets audited by the Security Team.
@@ -587,13 +574,6 @@ patches = [
     # Windows: Fix crash when |sandbox_info| parameter is nullptr.
     # https://github.com/chromiumembedded/cef/issues/3210
     'name': 'win_sandbox_3210',
-  },
-  {
-    # Windows: Fix MSVC compile error with sandbox target.
-    # error: static assertion failed due to requirement
-    # '!is_const_v<const unsigned char>': The C++ Standard forbids
-    # containers of const elements because allocator<const T> is ill-formed.
-    'name': 'win_sandbox_policy',
   },
   {
     # Windows: Always use the root window as the owner for shell dialogs.
@@ -747,12 +727,6 @@ patches = [
     # RequestContextTest.PopupNavDestroyParentAfterCreationRCGlobal.
     # https://issues.chromium.org/issues/323753235#comment11
     'name': 'content_initiator_policy_323753235'
-  },
-  {
-    # win: Fix undefined std::_Literal_zero_is_expected() when building
-    # cef_sandbox with VS 17.9.2 version of MSVC STL.
-    # https://github.com/chromiumembedded/cef/issues/3708
-    'name': 'win_sandbox_op3way_3708'
   },
   {
     # Fix ThreadPool DCHECK during startup when using multi-threaded message
