--- a/tests/cefclient/CMakeLists.txt.in
+++ b/tests/cefclient/CMakeLists.txt.in
@@ -292,11 +292,45 @@ if(OS_WINDOWS)
     ${CEFCLIENT_WINDOWS_SRCS}
     )
 
-  # Executable target.
-  add_executable(${CEF_TARGET} WIN32 ${CEFCLIENT_SRCS})
-  SET_EXECUTABLE_TARGET_PROPERTIES(${CEF_TARGET})
+  # Additional flags not listed in CEF_DELAYLOAD_FLAGS.
+  set(ADDITIONAL_DELAYLOAD_FLAGS
+    /DELAYLOAD:glu32.dll
+    /DELAYLOAD:oleaut32.dll
+    /DELAYLOAD:opengl32.dll
+    )
+
+  if(USE_SANDBOX)
+    # Shared library (DLL) target.
+    list(APPEND CEF_SHARED_LINKER_FLAGS
+      ${ADDITIONAL_DELAYLOAD_FLAGS}
+    )
+    add_library(${CEF_TARGET} SHARED ${CEFCLIENT_SRCS})
+    SET_LIBRARY_TARGET_PROPERTIES(${CEF_TARGET})
+
+    # Copy and rename the bootstrap binary.
+    COPY_SINGLE_FILE(${CEF_TARGET} ${CEF_BINARY_DIR}/bootstrap.exe ${CEF_TARGET_OUT_DIR}/${CEF_TARGET}.exe)
+
+    if (CMAKE_GENERATOR MATCHES "Visual Studio")
+      # Make the bootstrap binary the default command for the Visual Studio debugger.
+      set_target_properties(${CEF_TARGET} PROPERTIES
+        VS_DEBUGGER_COMMAND "$<TARGET_FILE_DIR:${CEF_TARGET}>/${CEF_TARGET}.exe"
+      )
+    endif()
+  else()
+    # Executable target.
+    list(APPEND CEF_EXE_LINKER_FLAGS
+      ${ADDITIONAL_DELAYLOAD_FLAGS}
+    )
+    add_executable(${CEF_TARGET} WIN32 ${CEFCLIENT_SRCS})
+    SET_EXECUTABLE_TARGET_PROPERTIES(${CEF_TARGET})
+
+    # Add the custom manifest files to the executable.
+    ADD_WINDOWS_MANIFEST("${CMAKE_CURRENT_SOURCE_DIR}/win" "${CEF_TARGET}" "exe")
+  endif()
+
   add_dependencies(${CEF_TARGET} libcef_dll_wrapper)
   target_link_libraries(${CEF_TARGET} libcef_lib libcef_dll_wrapper ${CEF_STANDARD_LIBS} d3d11.lib glu32.lib imm32.lib opengl32.lib)
+
   # Add additional /DELAYLOADs that are missing from CEF_EXE_LINKER_FLAGS.
   set_property(TARGET ${CEF_TARGET} PROPERTY LINK_FLAGS "/DELAYLOAD:glu32.dll /DELAYLOAD:oleaut32.dll /DELAYLOAD:opengl32.dll")
 
@@ -304,15 +338,6 @@ if(OS_WINDOWS)
     # Required by VS2013 to link accessibility API functions.
     target_link_libraries(${CEF_TARGET} oleacc.lib)
   endif()
-
-  if(USE_SANDBOX)
-    # Logical target used to link the cef_sandbox library.
-    ADD_LOGICAL_TARGET("cef_sandbox_lib" "${CEF_SANDBOX_LIB_DEBUG}" "${CEF_SANDBOX_LIB_RELEASE}")
-    target_link_libraries(${CEF_TARGET} cef_sandbox_lib ${CEF_SANDBOX_STANDARD_LIBS})
-  endif()
-
-  # Add the custom manifest files to the executable.
-  ADD_WINDOWS_MANIFEST("${CMAKE_CURRENT_SOURCE_DIR}/win" "${CEF_TARGET}" "exe")
 
   # Copy CEF binary and resource files to the target output directory.
   COPY_FILES("${CEF_TARGET}" "${CEF_BINARY_FILES}" "${CEF_BINARY_DIR}" "${CEF_TARGET_OUT_DIR}")
