patch: Remove sandbox-related //base patches (see #3824)
The //base target is only used by cef_sandbox on Windows (not macOS).

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -437,7 +437,7 @@ patches = [
     'name': 'printing_context_2196',
   },
   {
-    # Disable thin archives with cef_sandbox builds.
+    # mac: Disable thin archives with cef_sandbox builds.
     # https://github.com/chromiumembedded/cef/issues/3674
     'name': 'build',
   },
@@ -518,23 +518,6 @@ patches = [
     # Store command-line switch names as lower-case ASCII on all platforms.
     # https://github.com/chromiumembedded/cef/issues/1872
     'name': 'base_command_line_1872',
-  },
-  {
-    # Remove cef_sandbox dependency on boringssl functions.
-    # https://github.com/chromiumembedded/cef/issues/2743
-    #
-    # Avoid usage of std::atomic_flag::test() added in C++20.
-    # https://github.com/llvm/llvm-project/issues/57364
-    #
-    # Avoid usage of PartitionAlloc assertions (PA_BASE_CHECK) in raw_ptr.h.
-    #
-    # Disable use of Rust for JSON parsing with cef_sandbox.
-    # Enables the fallback to C++ that was removed in
-    # https://crrev.com/9ddc1624637c8cfa8ef50a95abd779e0ba4d67f6
-    #
-    # Avoid inclusion of undefined PartitionAlloc dependencies in Dawn after
-    # https://crrev.com/4dacf2b61c359950d2c2f1b5f9b9d079a01290a4
-    'name': 'base_sandbox_2743',
   },
   {
     # Add RenderWidgetHostImpl::SetCompositorForFlingScheduler to fix fling
