Update to Chromium version 138.0.7204.0 (#1465706)
Mac: Require Xcode 16.3 (16E140) and SDK 15.4 (24E241)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -747,5 +747,9 @@ patches = [
     #   builds.
     # https://github.com/chromiumembedded/cef/issues/3892
     'name': 'config_3892'
+  },
+  {
+    # Add |first| parameter to NavigationThrottleRegistry::AddThrottle.
+    'name': 'content_throttle_registry'
   }
 ]
