--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1661,18 +1661,20 @@ if (is_mac) {
     ]
   }
 
-  # Add the ANGLE .dylibs in the MODULE_DIR of the Framework app bundle.
-  bundle_data("cef_framework_angle_binaries") {
-    sources = [
-      "$root_out_dir/egl_intermediates/libEGL.dylib",
-      "$root_out_dir/egl_intermediates/libGLESv2.dylib",
-    ]
-    outputs = [
-      "{{bundle_contents_dir}}/Libraries/{{source_file_part}}",
-    ]
-    public_deps = [
-      "//ui/gl:angle_library_copy",
-    ]
+  if (!use_static_angle) {
+    # Add the ANGLE .dylibs in the MODULE_DIR of the Framework app bundle.
+    bundle_data("cef_framework_angle_binaries") {
+      sources = [
+        "$root_out_dir/egl_intermediates/libEGL.dylib",
+        "$root_out_dir/egl_intermediates/libGLESv2.dylib",
+      ]
+      outputs = [
+        "{{bundle_contents_dir}}/Libraries/{{source_file_part}}",
+      ]
+      public_deps = [
+        "//ui/gl:angle_library_copy",
+      ]
+    }
   }
 
   # We need to copy the CEF libraries so that the bundle_data dependencies have
@@ -1731,11 +1733,14 @@ if (is_mac) {
     sources = libcef_sources_common + includes_mac
 
     deps = libcef_deps_common + [
-      ":cef_framework_angle_binaries",
       ":cef_framework_cef_binaries",
       ":cef_framework_resources",
       ":cef_framework_swiftshader_binaries",
     ]
+
+    if (!use_static_angle) {
+      deps += [ ":cef_framework_angle_binaries" ]
+    }
 
     configs += [
       ":libcef_autogen_config",
