Add patches for Chromium tarball support (see #3944)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -795,5 +795,16 @@ patches = [
     #   builds.
     # https://github.com/chromiumembedded/cef/issues/3892
     'name': 'config_3892'
+  },
+  {
+    # Apply DEPS changes for source tarball support.
+    # https://github.com/chromiumembedded/cef/issues/3944
+    'name': 'tarball_deps'
+  },
+  {
+    # Apply gclient.py changes for source tarball support.
+    # https://github.com/chromiumembedded/cef/issues/3944
+    'name': 'tarball_gclient',
+    'path': 'third_party/depot_tools'
   }
 ]
