Add patches for Chromium tarball support (see #3944)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -751,5 +751,16 @@ patches = [
   {
     # Add |first| parameter to NavigationThrottleRegistry::AddThrottle.
     'name': 'content_throttle_registry'
+  },
+  {
+    # Apply DEPS changes for source tarball support.
+    # https://github.com/chromiumembedded/cef/issues/3944
+    'name': 'tarball_deps'
+  },
+  {
+    # Apply gclient.py changes for source tarball support.
+    # https://github.com/chromiumembedded/cef/issues/3944
+    'name': 'tarball_gclient',
+    'path': 'third_party/depot_tools'
   }
 ]
